--- a/index.html
+++ b/index.html
@@ -1,58 +1,25 @@
 <html>
     <head>
-        <title>Indian Military- Army</title>
-        <link rel="stylesheet" type="text/css"  href="./css/main.css">
-        <link rel="icon" href="./images/favicon.jpg" type="image/x-icon"/>
+        <title>Indian Army Ranks</title>
+        <link rel="icon" href="./images/Emblem.png" type="image/x-icon"/>
     </head>
-    <body>
-        <div class="img-block">
-            <img class="small-img" src="./images/1 (1).jpg" />
-            <div class="description" >
-                General
-            </div>
-        </div>
-        <div class="img-block">
-            <img class="small-img" src="./images/1 (2).jpg" />
-            <div class="description" >
-                Lieutenant
-            </div>
-        </div>
-        <div class="img-block">
-            <img class="small-img" src="./images/1 (3).jpg" />
-            <div class="description" >
-                Master Sergeant
-            </div>
-        </div>
-        <div class="img-block">
-            <img class="small-img" src="./images/1 (4).jpg" />
-            <div class="description" >
-                Sergeant
-            </div>
-        </div>
-        <div class="img-block">
-            <img class="small-img" src="./images/1 (5).jpg" />
-            <div class="description" >
-                Sergeant
-            </div>
-        </div>
-        <div class="img-block">
-            <img class="small-img" src="./images/1 (6).jpg" />
-            <div class="description" >
-                Sergeant
-            </div>
-        </div>
-        <div class="img-block">
-            <img class="small-img" src="./images/1 (7).jpg" />
-            <div class="description" >
-                Sergeant
-            </div>
-        </div>
-        <div class="img-block">
-            <img class="small-img" src="./images/1 (8).jpg" />
-            <div class="description" >
-                Private
-            </div>
-        </div>
+    <body background="./images/background.jpg">
 
+		 <center style="font-size:30px; color:crimson;">
+			<marquee><h2>Dr. V. B. Kolte College of Engg and Polytechnic</marquee></h2>
+			<h2><br>
+
+			Name: Jyoti Paryani
+			<br>
+			Year: 2nd Yr
+			<br>
+			Branch: Computer Science
+			<br>
+			Project Topic: Indian Army Ranks
+			<a href="./start.html"><h3><img width="64" height="64" src="./images/start.png"/></h3></a></h2>
+        </center>
+    </font>
+    </img>
     </body>
 </html>
+
